Fix bottom of div being cut off

--- a/electron-app/styles.css
+++ b/electron-app/styles.css
@@ -42,12 +42,12 @@ li {
 
 .icon-container {
   display: inline-block;
-  height: 100%;
   top: 61px;
   left: 136px;
   padding: 22px;
+  height: 396px;
   width: 500px;
-  overflow-y: scroll;
+  overflow: auto;
   position: fixed;
 }
 
